fix margins, padding on mobile page to line up with mockup

--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ img {
 @media (max-width: 500px) {
   .nav-container h1 {
     font-size: 3rem;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-bottom: 5px;
   }
 }
@@ -196,8 +196,9 @@ img {
 }
 @media (max-width: 500px) {
   .nav-container .nav-options a {
-    margin-left: 24px;
-    margin-right: 38px;
+    margin-left: 20px;
+    margin-right: 34px;
+    padding-right: 5px;
   }
 }
 @media (max-width: 500px) {
@@ -226,15 +227,19 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
-.header {
-  border: 1px solid red;
-}
 .header .header-content {
   margin: 20px 0;
 }
 @media (max-width: 500px) {
+  .header .header-content {
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+}
+@media (max-width: 500px) {
   .header .header-content h2 {
     margin-left: 24px;
+    padding: 0;
   }
 }
 .header .header-content p {
@@ -245,9 +250,9 @@ img {
 @media (max-width: 500px) {
   .header .header-content p {
     width: 470px;
-    margin-left: 20px;
-    padding-bottom: 10px;
+    margin-left: 24px;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
 }
 .home .content-section {
@@ -255,19 +260,18 @@ img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .home .content-section {
     width: 500px;
-    margin: 0;
+    margin-top: 29px;
     padding: 0;
+    margin-bottom: 0;
   }
 }
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .home .content-section .text-content {
@@ -284,28 +288,28 @@ img {
   .home .content-section .img-content {
     width: 100%;
     margin-left: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 4px;
   }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .home .content-section .img-content img {
-    width: 90%;
+    width: 96%;
+    margin-bottom: 0;
   }
 }
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .home .inverse-content {
     display: flex;
     flex-direction: column-reverse;
-    margin: 0;
+    padding-bottom: 6px;
+    border-bottom: 2px dashed #C0C0C0;
   }
 }
 .home .inverse-content .text-content {
@@ -319,14 +323,15 @@ img {
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .home .content-destination {
     width: 460px;
-    margin-right: 32px;
-    margin: 0;
-    margin-bottom: 24px;
+    padding-left: 12px;
+    padding-top: 20px;
+    margin-right: 20px;
+    padding-bottom: 36px;
+    margin-bottom: 0;
   }
 }
 .home .content-destination img {
@@ -337,13 +342,13 @@ img {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .content-pick {
     display: column;
     flex-wrap: wrap;
-    padding-right: 26px;
+    padding-right: 30px;
+    padding-top: 26px;
   }
 }
 .content-pick .destination {
@@ -361,7 +366,7 @@ img {
   height: 44px;
   width: 200px;
   border-radius: 16px;
-  padding: 14px 52px;
+  padding: 14px 46px;
   font-size: 1.8rem;
   color: #FFFFFF;
   background: #17A2B8;
