--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,19 @@
 .header{
-  border: 1px solid red;
 
   .header-content {
     margin: 20px 0;
 
+    @media @mobile {
+      margin-top: 6px;
+      margin-bottom: 6px;
+    }
+
+
     h2 {
       @media @mobile {
         margin-left: 24px;
+        padding: 0;
+
       }
     }
 
@@ -17,9 +24,9 @@
 
       @media @mobile {
         width: 470px;
-        margin-left: 20px;
-        padding-bottom: 10px;
+        margin-left: 24px;
         margin-bottom: 10px;
+        margin-top: 10px;
       }
     }
   }
@@ -33,12 +40,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid red;
 
     @media @mobile {
       width: 500px;
-      margin: 0;
+      margin-top: 29px;
       padding: 0;
+      margin-bottom: 0;
     }
 
    
@@ -46,13 +53,13 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
-      border: 1px solid red;
       
       @media @mobile {
         width: 96%;
         margin-left: 20px;
         margin-top: 0px;
       }
+
     }
 
     .img-content {
@@ -62,14 +69,14 @@
       @media @mobile {
         width: 100%;
         margin-left: 20px;
-        margin-bottom: 40px;
+        margin-bottom: 4px;
       }
       img {
         border-radius: 10px;
-        border: 1px solid red;
 
         @media @mobile {
-          width: 90%;
+          width: 96%;
+          margin-bottom: 0;
         }
 
       }
@@ -79,12 +86,12 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
-    border: 1px solid red;
 
     @media @mobile {
       display: flex;
       flex-direction: column-reverse;
-      margin: 0;
+      padding-bottom: 6px;
+      border-bottom: 2px dashed @silver;
     }
 
     .text-content {
@@ -101,13 +108,16 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-    border: 1px solid red;
+
 
     @media @mobile {
       width: 460px;
-      margin-right: 32px;
-      margin: 0;
-      margin-bottom: 24px;
+      padding-left: 12px;
+      padding-top: 20px;
+      margin-right: 20px;
+      padding-bottom: 36px;
+      margin-bottom: 0;
+  
     }
 
     img {
@@ -122,12 +132,13 @@
   border-top: 2px dashed @navigation-border;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
+
 
   @media @mobile {
     display: column;
     flex-wrap: wrap;
-    padding-right: 26px;
+    padding-right: 30px;
+    padding-top: 26px;
   }
 
   .destination {
@@ -142,7 +153,7 @@
 
     .btn {
       .sign-up-button(44px, 200px, 16px);
-      padding: 14px 52px;
+      padding: 14px 46px;
       font-size: 1.8rem;
       color: @white;
       background: @eastern-blue;
