--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,7 @@
     h1 {
         @media @mobile {
             font-size: 3rem;
-            margin-left: 20px;
+            margin-left: 10px;
             margin-bottom: 5px;
         }
     }
@@ -26,8 +26,9 @@
             font-size: 1.6rem;
 
             @media @mobile {
-                margin-left: 24px;
-                margin-right: 38px;
+                margin-left: 20px;
+                margin-right: 34px;
+                padding-right: 5px;
             }
         }
 
